更新leetcode 300-319未上锁算法

--- a/cpp/leetcode/leetcode.vcxproj
+++ b/cpp/leetcode/leetcode.vcxproj
@@ -280,6 +280,20 @@
     <ClCompile Include="299. bulls-and-cows.cpp" />
     <ClCompile Include="300. longest-increasing-subsequence.cpp" />
     <ClCompile Include="301. remove-invalid-parentheses.cpp" />
+    <ClCompile Include="303. range-sum-query-immutable.cpp" />
+    <ClCompile Include="304. range-sum-query-2d-immutable.cpp" />
+    <ClCompile Include="306. additive-number.cpp" />
+    <ClCompile Include="307. range-sum-query-mutable.cpp" />
+    <ClCompile Include="309. best-time-to-buy-and-sell-stock-with-cooldown.cpp" />
+    <ClCompile Include="310. minimum-height-trees.cpp" />
+    <ClCompile Include="312. burst-balloons.cpp" />
+    <ClCompile Include="313. super-ugly-number.cpp" />
+    <ClCompile Include="315. count-of-smaller-numbers-after-self.cpp" />
+    <ClCompile Include="316. remove-duplicate-letters.cpp" />
+    <ClCompile Include="318. maximum-product-of-word-lengths.cpp" />
+    <ClCompile Include="319. bulb-switcher.cpp" />
+    <ClCompile Include="320. generalized-abbreviation.cpp" />
+    <ClCompile Include="322. coin-change.cpp" />
     <ClCompile Include="摩尔投票法升级229. majority-element-ii.cpp" />
     <ClCompile Include="230. kth-smallest-element-in-a-bst.cpp" />
     <ClCompile Include="231. power-of-two.cpp" />
