--- a/cpp/leetcode/leetcode.vcxproj
+++ b/cpp/leetcode/leetcode.vcxproj
@@ -292,8 +292,20 @@
     <ClCompile Include="316. remove-duplicate-letters.cpp" />
     <ClCompile Include="318. maximum-product-of-word-lengths.cpp" />
     <ClCompile Include="319. bulb-switcher.cpp" />
-    <ClCompile Include="320. generalized-abbreviation.cpp" />
+    <ClCompile Include="321. create-maximum-number.cpp" />
     <ClCompile Include="322. coin-change.cpp" />
+    <ClCompile Include="324. wiggle-sort-ii.cpp" />
+    <ClCompile Include="326. power-of-three.cpp" />
+    <ClCompile Include="327. count-of-range-sum.cpp" />
+    <ClCompile Include="328. odd-even-linked-list.cpp" />
+    <ClCompile Include="329. longest-increasing-path-in-a-matrix.cpp" />
+    <ClCompile Include="330. patching-array.cpp" />
+    <ClCompile Include="331. verify-preorder-serialization-of-a-binary-tree.cpp" />
+    <ClCompile Include="332. Reconstruct Itinerary.cpp" />
+    <ClCompile Include="334. increasing-triplet-subsequence.cpp" />
+    <ClCompile Include="337. House Robber III.cpp" />
+    <ClCompile Include="338. counting-bits.cpp" />
+    <ClCompile Include="341. flatten-nested-list-iterator.cpp" />
     <ClCompile Include="摩尔投票法升级229. majority-element-ii.cpp" />
     <ClCompile Include="230. kth-smallest-element-in-a-bst.cpp" />
     <ClCompile Include="231. power-of-two.cpp" />
