更新leetcode 341-370, 未上锁算法题 再次尝试leetcode 327 O(n^2)半暴力法也TLE

--- a/cpp/leetcode/leetcode.vcxproj
+++ b/cpp/leetcode/leetcode.vcxproj
@@ -308,6 +308,22 @@
     <ClCompile Include="337. House Robber III.cpp" />
     <ClCompile Include="338. counting-bits.cpp" />
     <ClCompile Include="341. flatten-nested-list-iterator.cpp" />
+    <ClCompile Include="342. power-of-four.cpp" />
+    <ClCompile Include="343. integer-break.cpp" />
+    <ClCompile Include="344. reverse-string.cpp" />
+    <ClCompile Include="345. Reverse Vowels of a String.cpp" />
+    <ClCompile Include="347. top-k-frequent-elements.cpp" />
+    <ClCompile Include="349. Intersection of Two Arrays.cpp" />
+    <ClCompile Include="350. Intersection of Two Arrays II.cpp" />
+    <ClCompile Include="352. data-stream-as-disjoint-intervals.cpp" />
+    <ClCompile Include="354. russian-doll-envelopes.cpp" />
+    <ClCompile Include="355. design-twitter.cpp" />
+    <ClCompile Include="357. count-numbers-with-unique-digits.cpp" />
+    <ClCompile Include="363. max-sum-of-rectangle-no-larger-than-k.cpp" />
+    <ClCompile Include="365. water-and-jug-problem.cpp" />
+    <ClCompile Include="367. Valid Perfect Square.cpp" />
+    <ClCompile Include="368. largest-divisible-subset.cpp" />
+    <ClCompile Include="371. Sum of Two Integers.cpp" />
     <ClCompile Include="摩尔投票法升级229. majority-element-ii.cpp" />
     <ClCompile Include="230. kth-smallest-element-in-a-bst.cpp" />
     <ClCompile Include="231. power-of-two.cpp" />
