--- a/cpp/leetcode/leetcode.vcxproj
+++ b/cpp/leetcode/leetcode.vcxproj
@@ -333,6 +333,26 @@
     <ClCompile Include="378. kth-smallest-element-in-a-sorted-matrix.cpp" />
     <ClCompile Include="380. insert-delete-getrandom-o1.cpp" />
     <ClCompile Include="381. insert-delete-getrandom-o1-duplicates-allowed.cpp" />
+    <ClCompile Include="382. linked-list-random-node.cpp" />
+    <ClCompile Include="383. ransom-note.cpp" />
+    <ClCompile Include="384. shuffle-an-array.cpp" />
+    <ClCompile Include="385. mini-parser.cpp" />
+    <ClCompile Include="386. lexicographical-numbers.cpp" />
+    <ClCompile Include="387. First Unique Character in a String.cpp" />
+    <ClCompile Include="388. longest-absolute-file-path.cpp" />
+    <ClCompile Include="389. Find the Difference.cpp" />
+    <ClCompile Include="390. elimination-game.cpp" />
+    <ClCompile Include="391. perfect-rectangle.cpp" />
+    <ClCompile Include="392. is-subsequence.cpp" />
+    <ClCompile Include="393. utf-8-validation.cpp" />
+    <ClCompile Include="394. Decode String.cpp" />
+    <ClCompile Include="395. longest-substring-with-at-least-k-repeating-characters.cpp" />
+    <ClCompile Include="396. rotate-function.cpp" />
+    <ClCompile Include="397. submissions.cpp" />
+    <ClCompile Include="398. random-pick-index.cpp" />
+    <ClCompile Include="399. evaluate-division.cpp" />
+    <ClCompile Include="400. nth-digit.cpp" />
+    <ClCompile Include="401. binary-watch.cpp" />
     <ClCompile Include="摩尔投票法升级229. majority-element-ii.cpp" />
     <ClCompile Include="230. kth-smallest-element-in-a-bst.cpp" />
     <ClCompile Include="231. power-of-two.cpp" />
