更新leetcode 401-420 未上锁算法题

--- a/cpp/leetcode/leetcode.vcxproj
+++ b/cpp/leetcode/leetcode.vcxproj
@@ -353,6 +353,22 @@
     <ClCompile Include="399. evaluate-division.cpp" />
     <ClCompile Include="400. nth-digit.cpp" />
     <ClCompile Include="401. binary-watch.cpp" />
+    <ClCompile Include="402. remove-k-digits.cpp" />
+    <ClCompile Include="403. frog-jump.cpp" />
+    <ClCompile Include="404. sum-of-left-leaves.cpp" />
+    <ClCompile Include="405. convert-a-number-to-hexadecimal.cpp" />
+    <ClCompile Include="406. queue-reconstruction-by-height.cpp" />
+    <ClCompile Include="407. trapping-rain-water-ii.cpp" />
+    <ClCompile Include="409. longest-palindrome.cpp" />
+    <ClCompile Include="410. split-array-largest-sum.cpp" />
+    <ClCompile Include="412. fizz-buzz.cpp" />
+    <ClCompile Include="413. arithmetic-slices.cpp" />
+    <ClCompile Include="414. third-maximum-number.cpp" />
+    <ClCompile Include="415. add-strings.cpp" />
+    <ClCompile Include="416. partition-equal-subset-sum.cpp" />
+    <ClCompile Include="417. pacific-atlantic-water-flow.cpp" />
+    <ClCompile Include="419. battleships-in-a-board.cpp" />
+    <ClCompile Include="421. maximum-xor-of-two-numbers-in-an-array.cpp" />
     <ClCompile Include="摩尔投票法升级229. majority-element-ii.cpp" />
     <ClCompile Include="230. kth-smallest-element-in-a-bst.cpp" />
     <ClCompile Include="231. power-of-two.cpp" />
